--- a/SampleSpringSecurity/src/main/resources/templates/admin.html
+++ b/SampleSpringSecurity/src/main/resources/templates/admin.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Main</h1>
+		<h1>Admin</h1>
 		<form action="/sss/logout" method="post">
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
 			<button type="submit"> logout </button>
